--- a/index.html
+++ b/index.html
@@ -33,32 +33,12 @@
 				<!-- Nav -->
                     <nav class="navbar navbar-default navbar-static-top" role="navigation">
                         <div class="container-fluid">
-                            <!--<a href="#" class="navbar-brand">New Life Assembly of God</a>
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        </div>
-
-                        <div class="collapse navbar-collapse" id="navbar-collapse">-->
                             <ul class="nav navbar-nav">
                                 <li id="home-nav"><a href="#home" class="plink" data-toggle="tooltip" data-placement="bottom" title="Home" onclick=""><span class="icon fa-home fa-lg"></span></a></li>
                                 <li id="info-nav"><a href="#info" class="plink" data-toggle="tooltip" data-placement="bottom" title="About Us" onclick=""><span class="icon fa-info fa-lg"></span></a></li>
-                                <!--<li id="ministries-nav" class="dropdown">
-                                    <a id="ministries-link" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-placement="bottom" title="Ministries"><span class="icon fa-leaf fa-lg"></span><span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li role="separator" class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                    </ul>
-                                </li>-->
-                                <li id="ministries-nav"><a href="#ministries" class="plink" data-toggle="tooltip" data-placement="bottom" title="Ministries"><span class="icon fa-leaf fa-lg"></span></a></li>
+                                <!--<li id="ministries-nav"><a href="#ministries" class="plink" data-toggle="tooltip" data-placement="bottom" title="Ministries"><span class="icon fa-leaf fa-lg"></span></a></li>-->
                                 <li id="calendar-nav"><a href="#calendar" class="plink" data-toggle="tooltip" data-placement="bottom" title="Calendar"><span class="icon fa-calendar fa-lg"></span></a></li>
-                                <li id="prayer-nav"><a href="#prayer" class="plink" data-toggle="tooltip" data-placement="bottom" title="Prayer"><span class="icon fa-paper-plane fa-lg"></span></a></li>
+                                <!--<li id="prayer-nav"><a href="#prayer" class="plink" data-toggle="tooltip" data-placement="bottom" title="Prayer"><span class="icon fa-paper-plane fa-lg"></span></a></li>-->
                                 <li id="blog-nav"><a href="#blog" class="plink" data-toggle="tooltip" data-placement="bottom" title="Blog"><span class="icon fa-comment fa-lg"</span></a></li>
                                 <li id="pushpay-nav"><a href="https://pushpay.com/pay/ellendaleag" target="_blank" data-toggle="tooltip" data-placement="bottom" title="PushPay"><span class="icon fa-usd fa-lg"></span> <span class="icon fa-external-link"></span></a></li>
                                 <li id="facebook-nav"><a href="https://facebook.com/ellendaleag" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Facebook"><span class="icon fa-facebook fa-lg"></span> <span class="icon fa-external-link"></span></a></li>
@@ -77,25 +57,28 @@
                         <div id="info" class="panel apanel panel-default">
                             <div class="panel-body">
                                 <h2>About Us</h2>
-                                <p>New Life Assembly of God is all about Living the Way, Learning the Truth and Experiencing the Life of Jesus together. It is our hope that together—in our expressions of love for one another—we will Live the Way, in our study and preaching of the Word of God we will Learn the Truth, and through our communion with God in prayer and worship we will Experience the Life of Jesus so that we all together will be built up in the love and unity of the faith to present everyone mature in Christ.</p>
-                                <a href="#ministries" class="btn btn-success btn-lg plink" role="button">Our Ministries <span class="icon fa-chevron-right"></span></a>
+                                <p>New Life Assembly of God is all about Living the Way, Learning the Truth and Experiencing the Life of Jesus together. It is our hope that together—in our expressions of love for one another—we will Live the Way, in our study and preaching of the Word of God we will Learn the Truth, and through our communion with God in prayer and worship we will Experience the Life of Jesus so that we all together will be built up in the love and unity of the faith to present everyone mature in Christ.</p><br>
+                                <!--<hr style="height: 10px; background: transparent url('favicon.ico'); background-size: contain; border: none;" />-->
+                                <h3>Our Ministries</h3>
+                                <p>A list of our ministries, coming soon.</p>
+                                <!--<a href="#ministries" class="btn btn-success btn-lg plink" role="button">Our Ministries <span class="icon fa-chevron-right"></span></a>-->
                             </div>
                         </div>
-                        <div id="ministries" class="panel apanel panel-default">
+                        <!--<div id="ministries" class="panel apanel panel-default">
                             <div class="panel-body">
                                 A list of our ministries, coming soon.
                             </div>
-                        </div>
+                        </div>-->
                         <div id="calendar" class="panel apanel panel-default">
                             <div class="panel-body">
                                 A calendar with all of our events, coming soon.
                             </div>
                         </div>
-                        <div id="prayer" class="panel apanel panel-default">
+                        <!--<div id="prayer" class="panel apanel panel-default">
                             <div class="panel-body">
                                 Submission of prayer requests, coming soon.
                             </div>
-                        </div>
+                        </div>-->
                         <div id="blog" class="panel apanel panel-default">
                             <div class="panel-body">
                                 The new blog, coming soon.
